Fixing no unread stories explainer on feed list when overlapping saved story tags. Also fixing endbar height in list view.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -444,8 +444,8 @@ body {
   color: rgba(0, 0, 0, .4);
   opacity: .4;
   font-size: 16px;
-  padding: 78px 24px 0;
-  position: absolute;
+  padding: 78px 16px 0;
+  margin: 48px 0;
   text-shadow: 0 1px 0 rgba(255, 255, 255, .4);
   top: 40%;
   width: 100%;
